tests/invalid_Programs/type-checker/inconsistent_comparison.kln
function main():integer
    true < (3 * 4)
